--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,9 @@ url:                #"https://lenpaul.github.io"
 github:
   url:               #"https://lenpaul.github.io/Lagrange"
 author:
-  name:              "Paul Le"
-  email:             "l.nguyen.paul@gmail.com"
-  twitter:           "paululele"
-  instagram:         "paululele"
-  github:            "lenpaul"
-  facebook:          "Le.Paul.94"
-  linkedin:          "lenpaul"
+  name:              "Kien Hui"
+  email:             "chipsa@outlook.com"
+  github:            "KienHui"
 navigation:
 - title: About
   url: /about
