--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
-title:               Lagrange
-tagline:             a minimalist Jekyll theme
+title:               Kien Hui's blog
+tagline:             random musings on things
 description:
 baseurl:            #"/Lagrange"
 url:                #"https://lenpaul.github.io"
