--- a/admin/config.yml
+++ b/admin/config.yml
@@ -13,6 +13,7 @@ collections: # A list of collections the CMS should be able to edit
     fields: # The fields each document in this collection have
       - {label: "Layout", name: "layout", widget: "string"}
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
+      - {label: "Categories", name: "categories", widget: "text"}
       - {label: "Tags", name: "tags", widget: "text"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
