--- a/admin/config.yml
+++ b/admin/config.yml
@@ -10,8 +10,9 @@ collections: # A list of collections the CMS should be able to edit
     label: "Post" # Used in the UI, ie.: "New Post"
     folder: "_posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template i.e. YYYY-MM-DD-title.md
     fields: # The fields each document in this collection have
-      - {label: "Layout", name: "layout", widget: "string"}
+      - {label: "Layout", name: "layout", widget: "string", default: "post"}
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
       - {label: "Categories", name: "categories", widget: "text"}
       - {label: "Tags", name: "tags", widget: "text"}
