--- a/admin/config.yml
+++ b/admin/config.yml
@@ -15,6 +15,6 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Layout", name: "layout", widget: "string", default: "post"}
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
       - {label: "Categories", name: "categories", widget: "text"}
-      - {label: "Tags", name: "tags", widget: "text"}
+      - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
